2008-01-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-insert-mime-button): Don't decode description.

	* mm-decode.el (mm-dissect-buffer): Decode description.

	* mml.el (mml-to-mime): Encode message header first.

2008-01-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-describe-bindings): Make it possible to use
	xrefs, i.e. [back] and [forward] buttons, in *Help* buffer.

	* lpath.el: Fbind help-buffer for Emacs 21 and XEmacs; bind
	help-xref-stack-item for Emacs 21, Emacs 22.1, and XEmacs.

2008-01-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-trim): Use append, not concat.

2008-01-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-read-summary-keys): Work for some `A'
	prefix keys.
	(gnus-article-read-summary-send-keys): Use gnus-character-to-event.
	(gnus-article-describe-bindings): Simplify; move XEmacs stuff to
	gnus-xmas.el.

	* gnus-xmas.el: Bind gnus-agent-summary-mode when compiling.
	(gnus-xmas-article-describe-bindings): New function.
	(gnus-xmas-redefine): Make gnus-article-describe-bindings alias to
	gnus-xmas-article-describe-bindings.

	* lpath.el: Don't fbind character-to-event and map-keymap for Emacs 21.

2008-01-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-marks, gnus-registry-default-mark):
	Add new variables for article mark management.
	(gnus-registry-extra-entries-precious, gnus-registry-trim): Define a
	list of extra data entries which, when present, will indicate that the
	article ID should not be trimmed from the registry.
	(gnus-registry-mark-article, gnus-registry-article-marks): Remove these
	functions.
	(gnus-registry-read-mark): New function to read a mark name from the
	user.
	(gnus-registry-set-article-mark, gnus-registry-remove-article-mark)
	(gnus-registry-set-article-mark-internal): New functions to add and
	remove marks.
	(gnus-registry-get-article-marks): New function to show the marks for